syntax = "proto3";

option java_multiple_files = true;
option java_package = "ru.flounder.study.service";
option java_outer_classname = "UserInfoProvider";


message UserRequest {
  int64 user_id = 1;
}

message UserResponse {
  string user_name = 1;
}

service UserInfoService {
  rpc GetUserName(UserRequest) returns (UserResponse);
}